# tauri-plugin-keyring

./: .gitignore  Cargo.toml  README.md  build.bat  package.json
examples/tauri-app/: package.json
examples/tauri-app/src-tauri/: Cargo.toml
src/: desktop.rs  implementation.rs  mobile.rs
